# mempalace

./: .gitignore  AGENTS.md  README.md  netlify.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bump-plugin-version.yml.disabled  ci.yml
docs/: schema.sql
hooks/: mempal_save_hook.sh
integrations/openclaw/: SKILL.md
mempalace/: cli.py  config.py  convo_miner.py  entity_registry.py  hooks_cli.py  knowledge_graph.py  mcp_server.py  migrate.py  miner.py  normalize.py  onboarding.py  palace.py  split_mega_files.py  version.py
mempalace/instructions/: help.md
tests/: test_cli.py  test_closets.py  test_config_extra.py  test_convo_miner.py  test_convo_miner_unit.py  test_entity_detector.py  test_entity_registry.py  test_general_extractor.py  test_hooks_cli.py  test_instructions_cli.py  test_knowledge_graph_extra.py  test_layers.py  test_mcp_server.py  test_miner.py  test_normalize.py  test_onboarding.py  test_palace_graph.py  test_room_detector_local.py  test_searcher.py  test_spellcheck.py  test_spellcheck_extra.py  test_split_mega_files.py
tests/benchmarks/: test_layers_bench.py
website/: .gitignore
website/.vitepress/: config.mts
